--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Convert a Google Hangouts or Voice backup into an SMS backup file for SMS Backup and Restore.",
   "main": "hangouts-to-sms.js",
   "dependencies": {
+    "backbone": "^1.3.3",
+    "browserify": "^14.4.0",
     "moment": "^2.18.1",
     "vcard-json": "^0.5.2",
     "xmldoc": "^1.1.0"
@@ -12,7 +14,9 @@
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2"
   },
-  "scripts": {},
+  "scripts": {
+    "browserify": "browserify contacts.js --standalone vcardfile -o home/contacts-browserify.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/paulwardrip/hangouts-to-sms.git"
